NetBSD Problem Report #35239
From www@NetBSD.org Tue Dec 12 04:53:05 2006
Return-Path: <www@NetBSD.org>
Received: by narn.NetBSD.org (Postfix, from userid 31301)
id 20BDC63BA6D; Tue, 12 Dec 2006 04:53:05 +0000 (UTC)
Message-Id: <20061212045305.20BDC63BA6D@narn.NetBSD.org>
Date: Tue, 12 Dec 2006 04:53:05 +0000 (UTC)
From: dhgutteridge@sympatico.ca
Reply-To: dhgutteridge@sympatico.ca
To: gnats-bugs@NetBSD.org
Subject: audiorecord(1) with harmony(4) on hp700 doesn't seem to work
X-Send-Pr-Version: www-1.0
>Number: 35239
>Notify-List:
>Category: port-hp700
>Synopsis: audiorecord(1) with harmony(4) on hp700 doesn't seem to work
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-hp700-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Tue Dec 12 04:55:00 +0000 2006
>Closed-Date: Tue Apr 28 07:13:04 +0000 2009
>Last-Modified: Tue Apr 28 07:13:04 +0000 2009
>Originator: David H. Gutteridge
>Release: current/4-BETA
>Organization:
>Environment:
NetBSD arcusiv.nonus-porta.net 4.99.4 NetBSD 4.99.4 (GENERIC) #0: Wed Nov 29 11:10:54 UTC 2006 root@arcusiv.nonus-porta.net:/usr/src/sys/arch/hp700/compile/GENERIC hp700
>Description:
If I try using audiorecord(1) on my B180L, it doesn't seem to work. The
audio functionality in general does work, e.g. I can play mp3s with
mpg123, I can send line-in input and it plays back through the speaker
when the monitor value is set accordingly, I can change output volume with
mixerctl(1), etc.
But if I try to record anything, I always get the error:
audiorecord: failed to set audio info: Invalid argument
This isn't what happens on other machines when there isn't even any
line-in capabilities (e.g on my iBook SE), where I get the error:
audiorecord: read failed: Operation not permitted
(In the latter case, the file specified was opened and a requisite
header for the audio output format written, whereas on hp700, the
resultant file is completely empty.)
Here is a script of some things I ran.
[disciple@arcusiv:disciple]# audioctl -a
name=Advanced audio
version=0.3;244
config=harmony0
encodings=mulaw:8,alaw:8,slinear_be:16,slinear_le:16*,ulinear_be:16*,ulinear_le:16*
properties=full_duplex
full_duplex=0
fullduplex=0
blocksize=4096
hiwat=16
lowat=1
monitor_gain=0
mode=
play.rate=8000
play.channels=1
play.precision=8
play.encoding=mulaw
play.gain=127
play.balance=32
play.port=0x0
play.avail_ports=0x0
play.seek=0
play.samples=0
play.eof=0
play.pause=0
play.error=0
play.waiting=0
play.open=0
play.active=0
play.buffer_size=65536
record.rate=8000
record.channels=1
record.precision=8
record.encoding=mulaw
record.gain=127
record.balance=32
record.port=0x0
record.avail_ports=0x3
record.seek=0
record.samples=0
record.eof=0
record.pause=0
record.error=0
record.waiting=0
record.open=0
record.active=0
record.buffer_size=65536
record.errors=0
[disciple@arcusiv:disciple]# mixerctl -v -a
inputs.input=240,240 volume
inputs.overrange=off [ off on ]
outputs.output=244,244 volume
outputs.gain=off [ off on ]
monitor.monitor=0,0 volume
record.source=line [ mic line ]
monitor.output=speaker [ line speaker headphones ]
disciple@arcusiv:disciple]# audiorecord foo.wav
audiorecord: failed to set audio info: Invalid argument
disciple@arcusiv:disciple]# audiorecord -p line foo.au
audiorecord: failed to set audio info: Invalid argument
I tried using ktrace too, here is the output.
[disciple@arcusiv:disciple]$ kdump ktrace.out
13092 1 ktrace EMUL "netbsd"
13092 1 ktrace RET ktrace 0
13092 1 ktrace CALL execve(0x70002348,0x70001038,0x70001044)
13092 1 ktrace NAMI "/bin/audiorecord"
13092 1 ktrace RET execve -1 errno 2 No such file or directory
13092 1 ktrace CALL execve(0x70002348,0x70001038,0x70001044)
13092 1 ktrace NAMI "/sbin/audiorecord"
13092 1 ktrace RET execve -1 errno 2 No such file or directory
13092 1 ktrace CALL execve(0x70002348,0x70001038,0x70001044)
13092 1 ktrace NAMI "/usr/bin/audiorecord"
13092 1 ktrace NAMI "/usr/libexec/ld.elf_so"
13092 1 audiorecord EMUL "netbsd"
13092 1 audiorecord RET execve JUSTRETURN
13092 1 audiorecord CALL mmap(0,0x8000,3,0x1002,0xffffffff,0,0,0)
13092 1 audiorecord RET mmap 805580800/0x30043000
13092 1 audiorecord CALL open(0x3002f918,0,0x3002f918)
13092 1 audiorecord NAMI "/etc/ld.so.conf"
13092 1 audiorecord RET open -1 errno 2 No such file or directory
13092 1 audiorecord CALL open(0x70002608,0,0)
13092 1 audiorecord NAMI "/usr/lib/libc.so.12"
13092 1 audiorecord RET open 3
13092 1 audiorecord CALL __fstat30(3,0x70002a88)
13092 1 audiorecord RET __fstat30 0
13092 1 audiorecord CALL mmap(0,0x1000,1,1,3,0,0,0)
13092 1 audiorecord RET mmap 806354944/0x30100000
13092 1 audiorecord CALL munmap(0x30100000,0x1000)
13092 1 audiorecord RET munmap 0
13092 1 audiorecord CALL mmap(0,0x123000,5,2,3,0,0,0)
13092 1 audiorecord RET mmap 806354944/0x30100000
13092 1 audiorecord CALL mmap(0x30208000,0xb000,7,0x12,3,0,0,0xf8000)
13092 1 audiorecord RET mmap 807436288/0x30208000
13092 1 audiorecord CALL mmap(0x30213000,0x10000,7,0x1012,0xffffffff,0,0,0)
13092 1 audiorecord RET mmap 807481344/0x30213000
13092 1 audiorecord CALL mprotect(0x301f9000,0xf000,0)
13092 1 audiorecord RET mprotect 0
13092 1 audiorecord CALL close(3)
13092 1 audiorecord RET close 0
13092 1 audiorecord CALL __sysctl(0x7000238c,2,0x30212894,0x70002388,0,0)
13092 1 audiorecord RET __sysctl 0
13092 1 audiorecord CALL open(0x700010d0,0x601,0x1b6)
13092 1 audiorecord NAMI "foo.wav"
13092 1 audiorecord RET open 3
13092 1 audiorecord CALL open(0x13d50,0,7)
13092 1 audiorecord NAMI "/dev/sound"
13092 1 audiorecord RET open 4
13092 1 audiorecord CALL ioctl(4,AUDIO_GETINFO,0x24cc0)
13092 1 audiorecord GIO fd 4 read 136 bytes
"\0\0\^_@\0\0\0\^A\0\0\0\b\0\0\0\^A\0\0\0\^?\0\0\0\0\0\0\0\0\0\0\0\0\0\^A\0\0\0\0\0\0\0\
\0\0\0\0\0\0\0\0\0\0 \0\0\0\0\0\0\^_@\0\0\0\^A\0\0\0\b\0\0\0\^A\0\0\0\^?\0\0\0\0\0\0\0\
\0\0\0\0\^C\0\^A\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0 \0\0\^A\0\0\0\0\0\0\0\^P\0\0\0\0\^P\
\0\0\0\f\0\0\0\0\0\0\0\^B"
13092 1 audiorecord RET ioctl 0
13092 1 audiorecord CALL __sysctl(0x700024d0,2,0x700024cc,0x700024c8,0,0)
13092 1 audiorecord RET __sysctl 0
13092 1 audiorecord CALL readlink(0x301eea30,0x700023d4,0x3f)
13092 1 audiorecord NAMI "/etc/malloc.conf"
13092 1 audiorecord RET readlink -1 errno 2 No such file or directory
13092 1 audiorecord CALL mmap(0,0x1000,3,0x1002,0xffffffff,0,0,0)
13092 1 audiorecord RET mmap 805613568/0x3004b000
13092 1 audiorecord CALL break(0x24d5c)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL break(0x25d5c)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL break(0x26000)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL break(0x36000)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL ioctl(4,AUDIO_SETINFO,0x24bf0)
13092 1 audiorecord GIO fd 4 wrote 136 bytes
"\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\
\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\
\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\0\0\^_@\0\0\0\^A\0\0\0\b\0\0\
\0\^A\0\0\0\^?\0\0\0\0\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\
\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^? \M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\
\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\M^?\0\0\0\^B"
13092 1 audiorecord RET ioctl -1 errno 22 Invalid argument
13092 1 audiorecord CALL write(2,0x700029f8,0xd)
13092 1 audiorecord GIO fd 2 wrote 13 bytes
"audiorecord: "
13092 1 audiorecord RET write 13/0xd
13092 1 audiorecord CALL write(2,0x700029b8,0x18)
13092 1 audiorecord GIO fd 2 wrote 24 bytes
"failed to set audio info"
13092 1 audiorecord RET write 24/0x18
13092 1 audiorecord CALL write(2,0x301ee910,2)
13092 1 audiorecord GIO fd 2 wrote 2 bytes
": "
13092 1 audiorecord RET write 2
13092 1 audiorecord CALL issetugid
13092 1 audiorecord RET issetugid 0
13092 1 audiorecord CALL issetugid
13092 1 audiorecord RET issetugid 0
13092 1 audiorecord CALL break(0x37000)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL open(0x70002dd0,0,0x3e4)
13092 1 audiorecord NAMI "/usr/share/nls/nls.alias.db"
13092 1 audiorecord RET open -1 errno 2 No such file or directory
13092 1 audiorecord CALL open(0x301edd6c,0,0x3e4)
13092 1 audiorecord NAMI "/usr/share/nls/nls.alias"
13092 1 audiorecord RET open 5
13092 1 audiorecord CALL fcntl(5,2,1)
13092 1 audiorecord RET fcntl 0
13092 1 audiorecord CALL __fstat30(5,0x70003248)
13092 1 audiorecord RET __fstat30 0
13092 1 audiorecord CALL mmap(0,0x5f0,1,2,5,0,0,0)
13092 1 audiorecord RET mmap 808452096/0x30300000
13092 1 audiorecord CALL close(5)
13092 1 audiorecord RET close 0
13092 1 audiorecord CALL break(0x38000)
13092 1 audiorecord RET break 0
13092 1 audiorecord CALL munmap(0x30300000,0x5f0)
13092 1 audiorecord RET munmap 0
13092 1 audiorecord CALL open(0x700028c8,0,1)
13092 1 audiorecord NAMI "/usr/share/nls/C/libc.cat"
13092 1 audiorecord RET open 5
13092 1 audiorecord CALL __fstat30(5,0x70002d48)
13092 1 audiorecord RET __fstat30 0
13092 1 audiorecord CALL mmap(0,0x10be,1,1,5,0,0,0)
13092 1 audiorecord RET mmap 808452096/0x30300000
13092 1 audiorecord CALL close(5)
13092 1 audiorecord RET close 0
13092 1 audiorecord CALL munmap(0x30300000,0x10be)
13092 1 audiorecord RET munmap 0
13092 1 audiorecord CALL write(2,0x700029f8,0x11)
13092 1 audiorecord GIO fd 2 wrote 17 bytes
"Invalid argument
"
13092 1 audiorecord RET write 17/0x11
13092 1 audiorecord CALL exit(1)
>How-To-Repeat:
Try using audiorecord(1).
>Fix:
>Release-Note:
>Audit-Trail:
From: "Valeriy E. Ushakov" <uwe@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/35239 CVS commit: src/sys/dev
Date: Tue, 14 Aug 2007 21:34:03 +0000 (UTC)
Module Name: src
Committed By: uwe
Date: Tue Aug 14 21:34:03 UTC 2007
Modified Files:
src/sys/dev: audio.c
Log Message:
au_setup_ports - don't hide ports->nports++ inside another expression,
especially if that other expression is the right hand side operand of
&& which is short-circuiting. The effect was that audiorecord(1)
would always fail trying to set recording port with AUDIO_SETINFO.
Tested on wss@pnpbios. It looks like this problem has been reported
as PR/35239, filed against port-hp700.
To generate a diff of this commit:
cvs rdiff -r1.222 -r1.223 src/sys/dev/audio.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->feedback
State-Changed-By: uwe@netbsd.org
State-Changed-When: Tue, 14 Aug 2007 21:44:24 +0000
State-Changed-Why:
Looks like a MI problem I've just fixed.
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: port-hp700/35239 (audiorecord(1) with harmony(4) on hp700 doesn't seem to wo
Date: Mon, 20 Aug 2007 23:36:51 -0400
Testing the change (pulled into the nick-csl-alignment branch)
triggered a kernel panic:
[disciple@arcusiv:disciple]$ audiorecord foo.wav
panic: trap: uvm_fault(0xc47ab0, 0, 1): 14
Stopped in pid 0.2 (system) at netbsd:cpu_Debugger+0x10: ldo
R'40(%r3
),%r30
db> bt
cpu_Debugger(a4a5ac,98000000,0,0) at netbsd:cpu_Debugger+0x10
panic(a5c9d4,c47ab0,0,1) at netbsd:panic+0x1bc
panic(f,5b95440,c70078,0) at netbsd:panic+0x14c
trap(1,0,c70090,0) at netbsd:trap+0xb6c
-- trap #15
harmony_intr(31b9400,17,933ad7e0,1718400) at netbsd:harmony_intr+0x1b0
harmony_intr(0,98000000,0,0) at netbsd:harmony_intr+0x158
hp700_intr_dispatch(0,98000000,c03bd220,653ed60) at
netbsd:hp700_intr_dispatch+0
x1a8
spllower(c81c80,0,0,0) at netbsd:spllower+0x58
mutex_vector_exit(653ed60,c87ed0,0,c87ec0) at netbsd:mutex_vector_exit+0x8c
lwp_unlock(5c21d20,0,0,0) at 0x70a180
mi_switch(5c21d20,5c21d20,6e0f2c,5c21d20) at netbsd:mi_switch+0x37c
-- trap #0
This is with source from August 19th. I'm no kernel hacker, but I
assume this has exposed an MD bug. I tried testing with a DEBUG kernel
instead of GENERIC, but that triggered another bug that caused a panic
during the initial boot, so no luck getting more detailed output, at
least not with a serial console...
(I tested with nick-csl-alignment because I had read this:
http://mail-index.netbsd.org/port-hp700/2007/08/13/0001.html
but if HEAD will work I could try that.)
Dave
From: "Liam J. Foy" <liamjfoy@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/35239 CVS commit: [netbsd-4] src/sys/dev
Date: Fri, 24 Aug 2007 20:23:10 +0000 (UTC)
Module Name: src
Committed By: liamjfoy
Date: Fri Aug 24 20:23:10 UTC 2007
Modified Files:
src/sys/dev [netbsd-4]: audio.c
Log Message:
Pull up following revision(s) (requested by uwe in ticket #835):
sys/dev/audio.c: revision 1.223
au_setup_ports - don't hide ports->nports++ inside another expression,
especially if that other expression is the right hand side operand of
&& which is short-circuiting. The effect was that audiorecord(1)
would always fail trying to set recording port with AUDIO_SETINFO.
Tested on wss@pnpbios. It looks like this problem has been reported
as PR/35239, filed against port-hp700.
To generate a diff of this commit:
cvs rdiff -r1.215.2.2 -r1.215.2.3 src/sys/dev/audio.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/35239 CVS commit: [netbsd-3] src/sys/dev
Date: Sun, 26 Aug 2007 19:08:02 +0000 (UTC)
Module Name: src
Committed By: bouyer
Date: Sun Aug 26 19:08:02 UTC 2007
Modified Files:
src/sys/dev [netbsd-3]: audio.c
Log Message:
Pull up following revision(s) (requested by uwe in ticket #1831):
sys/dev/audio.c: revision 1.223
au_setup_ports - don't hide ports->nports++ inside another expression,
especially if that other expression is the right hand side operand of
&& which is short-circuiting. The effect was that audiorecord(1)
would always fail trying to set recording port with AUDIO_SETINFO.
Tested on wss@pnpbios. It looks like this problem has been reported
as PR/35239, filed against port-hp700.
To generate a diff of this commit:
cvs rdiff -r1.192.4.6 -r1.192.4.7 src/sys/dev/audio.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: feedback->analyzed
State-Changed-By: skrll@netbsd.org
State-Changed-When: Tue, 20 Nov 2007 07:46:41 +0000
State-Changed-Why:
The driver assumes playback only at present and needs fixing
for record.
From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/35239 CVS commit: src/sys/arch/hp700/gsc
Date: Fri, 4 Jul 2008 11:14:19 +0000 (UTC)
Module Name: src
Committed By: skrll
Date: Fri Jul 4 11:14:19 UTC 2008
Modified Files:
src/sys/arch/hp700/gsc: harmony.c
Log Message:
Only process stuff if we're playing. This fixes panic if attempting to
record.
Part of PR/35239.
Progress is being made on getting recording working, but it's not quite
there yet.
To generate a diff of this commit:
cvs rdiff -r1.10 -r1.11 src/sys/arch/hp700/gsc/harmony.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Matt Fleming <mjf@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/35239 CVS commit: src/sys/arch/hp700/gsc
Date: Tue, 23 Sep 2008 14:07:11 +0000 (UTC)
Module Name: src
Committed By: mjf
Date: Tue Sep 23 14:07:11 UTC 2008
Modified Files:
src/sys/arch/hp700/gsc: harmony.c harmonyreg.h
Log Message:
Almost fix capturing audio with harmony(4).
There is a still a bug whereby a chunk of previously recorded data may
appear in the recorded audio file. This goes part way to fixing PR/35239
To generate a diff of this commit:
cvs rdiff -r1.12 -r1.13 src/sys/arch/hp700/gsc/harmony.c
cvs rdiff -r1.2 -r1.3 src/sys/arch/hp700/gsc/harmonyreg.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: Matt Fleming <mjf@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/35239 CVS commit: src/sys/arch/hp700/gsc
Date: Wed, 15 Apr 2009 20:07:58 +0000
Module Name: src
Committed By: mjf
Date: Wed Apr 15 20:07:58 UTC 2009
Modified Files:
src/sys/arch/hp700/gsc: harmony.c
Log Message:
Get audio capture fully working with harmony(4) and fix PR/35239.
skrll@ reports that with this patch he can record and playback audio.
Suprisingly the bug was actually with playback and not with capture.
When not capturing or playing audio we write to or read from "empty
buffers", the problem was that playback and capture were using the same
buffer and the playback code managed to pick up a bit of data that was
written from the capture code.
To generate a diff of this commit:
cvs rdiff -u -r1.13 -r1.14 src/sys/arch/hp700/gsc/harmony.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: analyzed->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Thu, 16 Apr 2009 10:10:19 +0000
State-Changed-Why:
OK to close?
From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/35239 CVS commit: [netbsd-5] src/sys/arch/hp700/gsc
Date: Fri, 17 Apr 2009 03:40:46 +0000
Module Name: src
Committed By: snj
Date: Fri Apr 17 03:40:46 UTC 2009
Modified Files:
src/sys/arch/hp700/gsc [netbsd-5]: harmony.c
Log Message:
Pull up following revision(s) (requested by mjf in ticket #704):
sys/arch/hp700/gsc/harmony.c: revision 1.14
Get audio capture fully working with harmony(4) and fix PR/35239.
skrll@ reports that with this patch he can record and playback audio.
Suprisingly the bug was actually with playback and not with capture.
When not capturing or playing audio we write to or read from "empty
buffers", the problem was that playback and capture were using the same
buffer and the playback code managed to pick up a bit of data that was
written from the capture code.
To generate a diff of this commit:
cvs rdiff -u -r1.13 -r1.13.4.1 src/sys/arch/hp700/gsc/harmony.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: <gnats-bugs@netbsd.org>
Cc:
Subject: RE: port-hp700/35239 (audiorecord(1) with harmony(4) on hp700
doesn't seem to work)
Date: Tue, 21 Apr 2009 10:42:54 -0400
> State-Changed-From-To: analyzed->feedback
> State-Changed-By: skrll@NetBSD.org
> State-Changed-When: Thu=2C 16 Apr 2009 10:10:19 +0000
> State-Changed-Why:
> OK to close?
I can test this on my B180L if it's of benefit=2C but I won't be able to
do so until next week in all likelihood.
Dave
From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@netbsd.org
Cc: port-hp700-maintainer@netbsd.org,
gnats-admin@netbsd.org,
netbsd-bugs@netbsd.org,
dhgutteridge@sympatico.ca,
uwe@netbsd.org
Subject: Re: port-hp700/35239 (audiorecord(1) with harmony(4) on hp700 doesn't seem to work)
Date: Thu, 23 Apr 2009 09:11:58 +0100
On Tuesday 21 April 2009 15:45:01 David H. Gutteridge wrote:
[...]
> I can test this on my B180L if it's of benefit=2C but I won't be able to
> do so until next week in all likelihood.
That'd be great.
> Dave
Thanks,
Nick
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@NetBSD.org
Cc:
Subject: Re: port-hp700/35239 (audiorecord(1) with harmony(4) on hp700 doesn't seem to work)
Date: Tue, 28 Apr 2009 02:55:16 -0400
On 16-Apr-09, at 6:10 AM, skrll@NetBSD.org wrote:
> Synopsis: audiorecord(1) with harmony(4) on hp700 doesn't seem to work
>
> State-Changed-From-To: analyzed->feedback
> State-Changed-By: skrll@NetBSD.org
> State-Changed-When: Thu, 16 Apr 2009 10:10:19 +0000
> State-Changed-Why:
> OK to close?
This seems to work now for me, too. The trouble is, either I've blown
the (super-cheap) microphone I was testing with, or the mic port is
damaged, all I seem to record is static from jiggling the jack. But I
can confirm that after recording I can play back other previously
recorded files without error, so the buffer problem must've gone away.
I'm fine with closing this.
Dave
State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 28 Apr 2009 07:13:04 +0000
State-Changed-Why:
confirmed fixed.
Thanks, Nick
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.