au_setup_ports - don't hide ports->nports++ inside another expression, especially if that other expression is the right hand side operand of && which is short-circuiting.  The effect was that audiorecord(1) would always fail trying to set recording port with AUDIO_SETINFO.

Tested on wss@pnpbios.  It looks like this problem has been reported
as PR/35239, filed against port-hp700.